# JazzBot

./: .gitignore  MidiSequenceUtility.cpp  README.md
DatabaseParser/: main.py
JazzBot/: CMakeLists.txt
JazzBot/CustomChordChanges/ChordSequence/: JohnColtrane_GiantSteps-1_chord_changes.txt
JazzBot/GeneratedSequences/: ChetBaker_JustFriends.mid  JohnColtrane_GiantSteps-1.mid
JazzBot/NoteGroupings/: eighth_note_groupings.sqbpro
JazzBot/SourceCode/: ChordUtility.cpp  ChordUtility.hpp  DatabaseConstants.h  EighthNotes.cpp  EighthNotes.hpp  Main.cpp  MidiFileUtility.cpp  MidiFileUtility.hpp  MidiSequenceUtility.cpp  MidiSequenceUtility.hpp  NoteGrouping.hpp  SequenceTypes.h  SequenceUtility.cpp  SequenceUtility.hpp
JazzBot/SourceCode/CommandLineApp/: CommandLineApplication.cpp  CommandLineApplication.hpp
JazzBot/SourceCode/GuiApp/: CustomViewport.cpp  CustomViewport.hpp  GenerateSequenceView.cpp  GenerateSequenceView.hpp  GuiNote.cpp  GuiNote.hpp  MainComponent.cpp  MainComponent.h  MainGuiApp.hpp  MainMenu.cpp  MainMenu.hpp  MidiFileToolBar.cpp  MidiFileToolBar.hpp  MidiSequenceView.cpp  MidiSequenceView.hpp  PianoRoll.cpp  PianoRoll.hpp  TrainingDataToolBar.cpp  TrainingDataToolBar.hpp  TrainingDataView.cpp  TrainingDataView.hpp
JazzBot/SourceCode/NoteGrouping/: EighthNotes.cpp  EighthNotes.hpp  GroupingsDatabase.cpp  GroupingsDatabase.hpp  NoteGrouping.cpp  NoteGrouping.hpp
JazzBot/SourceCode/NoteSequence/: EighthNoteSequence.cpp  EighthNoteSequence.hpp  NoteSequence.cpp  NoteSequence.hpp
JazzBot/SourceCode/Utility/: ChordParsingUtility.cpp  ChordParsingUtility.hpp  DatabaseUtility.cpp  DatabaseUtility.hpp  MidiFileUtility.cpp  MidiFileUtility.hpp  SequenceUtility.cpp  SequenceUtility.hpp  SongInformationUtility.cpp  SongInformationUtility.hpp
JazzBot/Tests/: ChordSequenceParsingTests.cpp  ChordSequenceTests.cpp  EighthNoteGroupingDetectionTests.cpp  EighthNoteGroupingGenerationTests.cpp  EighthNoteGroupingTests.cpp
JazzBot/Tests/ChordSequenceTestFiles/: BennyCarter_JustFriends_chord_changes.txt  four_normal.txt  four_slash.txt  normal_slash_alternate.txt  one_one_two.txt  one_three.txt  slash_and_normal.txt  slash_chord_first_beat.txt  slash_normal_alternate.txt  three_one.txt  too_many_beats_1.txt  two_chords.txt  two_normal_two_slash.txt  two_one_one.txt  two_slash_chords.txt  two_slash_two_normal.txt
JazzBot/Tests/ChordSequenceTestFiles/SequenceFiles/ChordSequence/: 2_5_1_6_chord_changes.txt
JazzBot/Tests/ChordSequenceTestFiles/SequenceFiles/MidiFiles/: middle_of_sequence.mid  start_sequence_second_time.mid
JazzBot/Tests/TestFiles/: benny_carter_just_friends_bar_9.mid  eight_notes.mid  eight_notes_1_quarter.mid  eight_notes_offset.mid  quarter_note_test.mid  sixteenth_trip_1.mid  sixteenth_trip_2.mid
JazzBot/Tests/TestFiles/ChordSequenceParsing/: chord_first_beat.txt  five_four_one_chord.txt  five_four_two_chords.txt  nine_four_one_chord.txt  nine_four_two_chords.txt  normal_and_slash.txt  one_one_two.txt  six_four_one_chord.txt  six_four_two_chords.txt  slash_and_normal.txt  slash_normal_alternate.txt  three_four_one_chord.txt  three_four_two_chords.txt  three_one.txt  two_one_one.txt  two_slash_two_normal.txt
JazzBot/Tests/TestFiles/EighthNoteDetection/Ableton/: midi_tick_value_test.mid
JazzBot/Tests/TestFiles/EighthNoteGeneration/MidiFiles/: end_of_sequence.mid  end_of_sequence_second_time.mid  middle_of_sequence_two_chords.mid  start_sequence.mid
JazzBot/Tests/TestFiles/EighthNoteGeneration/SongInformation/: 2_5_6_1_song_information.txt  BennyCarter_JustFriends_song_information.txt  middle_of_sequence_song_information.txt
MidiFileBpmCorrector/: CMakeLists.txt  ChetBaker_JustFriends_Solo_notes.csv  Main.cpp  MidiFileGenerator.cpp  SongInformation.cpp  SongInformation.hpp
MidiFileBpmCorrector/tests/: test.cpp
MidiFileBpmCorrector/tests/test_files/: invalid_note_onset.csv  valid_bar_onsets.csv
MidiFileGenerator/: CMakeLists.txt  JUCE  Main.cpp  MidiFileGenerator.cpp  MidiFileGenerator.hpp  Sequence.cpp  Sequence.hpp  test22.mid  test700001.mid
MidiFileGenerator/tests/: test.cpp
MidiFileGenerator/tests/test_files/: invalid_bar_onset.csv  invalid_note_duration.csv  invalid_note_value.csv  non_sequential_bar_onset.csv  non_sequential_note_onset.csv
MidiFileGenerator/xcode/: CMakeCache.txt  cmake_install.cmake
MidiFileGenerator/xcode/CMakeScripts/: ReRunCMake.make
MidiFileGenerator/xcode/JUCE/: JUCEConfigVersion.cmake  JUCEExportConfig.cmake  cmake_install.cmake
MidiFileGenerator/xcode/JUCE/CMakeScripts/: ReRunCMake.make
MidiFileGenerator/xcode/JUCE/JUCE.xcodeproj/: project.pbxproj
MidiFileGenerator/xcode/JUCE/modules/: cmake_install.cmake
MidiFileGenerator/xcode/JUCE/tools/: CMakeCache.txt  JUCEExportConfig.cmake  JUCEToolsExport.cmake  cmake_install.cmake
MidiFileGenerator/xcode/JUCE/tools/CMakeScripts/: ReRunCMake.make
MidiFileGenerator/xcode/JUCE/tools/JUCE.build/Debug/ALL_BUILD.build/: Script-2A83C5B8EF5772634A984AA4.sh
MidiFileGenerator/xcode/JUCE/tools/JUCE.xcodeproj/: project.pbxproj
MidiFileGenerator/xcode/JUCE/tools/modules/: cmake_install.cmake
MidiFileGenerator/xcode/MIDI_FILE_GENERATOR.build/Debug/ZERO_CHECK.build/: Script-7411248A1E15D72AEBF63896.sh
MidiFileGenerator/xcode/MIDI_FILE_GENERATOR.xcodeproj/: project.pbxproj
MidiFileGenerator/xcode/MIDI_FILE_GENERATOR.xcodeproj/project.xcworkspace/xcuserdata/tom-harvey.xcuserdatad/: UserInterfaceState.xcuserstate
MidiFileGenerator/xcode/MIDI_FILE_GENERATOR.xcodeproj/xcuserdata/tom-harvey.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
MidiFileGenerator/xcode/MIDI_FILE_GENERATOR.xcodeproj/xcuserdata/tom-harvey.xcuserdatad/xcschemes/: xcschememanagement.plist
MidiFileGenerator/xcode/MidiFileGenerator_artefacts/Debug/: test2.mid  test25.mid  test27.mid  test27ff.mid  test666.mid  test68.mid  test69.mid  test6f.mid  test70.mid  test78999.mid
MidiFileGenerator/xcode/MidiFileGenerator_artefacts/JuceLibraryCode/Debug/: Defs.txt
MidiFileGenerator/xcode/MidiFileGenerator_artefacts/JuceLibraryCode/RelWithDebInfo/: Defs.txt
Utility/: Utility.cpp  (+1 more)
(+2280 files in other folders)
